Fixed errors found by w3cvalidator in jsPrototyping also, w3cvalidator doesn't print the json object anymore when validating CSS

--- a/contributions/jsPrototyping/index.html
+++ b/contributions/jsPrototyping/index.html
@@ -71,7 +71,7 @@
 		<div class="content container" style="max-width: 50em;">
 			
 			<div id="intro">
-				<h2>Introduction</h1>
+				<h1>Introduction</h1>
 				<p>
 					The source code of this document itself is not very important at all.
 					This is a customized boilerplate of Twitter's <a href="http://bootstrap.com">Bootstrap</a>
@@ -130,7 +130,7 @@
 						<div id="console-navbar-eval" class="navbar">
 							<div class="navbar-inner">
 								<div class="container">
-									<label class="brand" for="eval-code">Eval:</label>
+									<label class="brand" for="eval-input">Eval:</label>
 									<form class="navbar-form">
 										<div class="input-append"><!-- This comments are needed to remove interpreted whitespaces between elements!
 											--><input	id="eval-input"	class="span2"	type="text"><!--
