Corrected some of the errors found by W3CValidator

--- a/contributions/html5local/employee.html
+++ b/contributions/html5local/employee.html
@@ -2,7 +2,7 @@
 <!-- employee view -->
 <html>
 <head>
-
+<title></title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
@@ -35,6 +35,6 @@ process();
 <script type="text/javascript">
 model.loadEmployee(employeeId);
 </script>
-
+</center>
 </body>
 </html>
