--- a/contributions/html5session/employee.html
+++ b/contributions/html5session/employee.html
@@ -4,7 +4,7 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
-
+<title></title>
 </head>
 <body>
 
@@ -35,6 +35,6 @@ process();
 <script type="text/javascript">
 model.loadEmployee(employeeId);
 </script>
-
+</center>
 </body>
 </html>
