--- a/contributions/html5XMLHttpRequest/employee.html
+++ b/contributions/html5XMLHttpRequest/employee.html
@@ -4,7 +4,7 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
-
+<title></title>
 </head>
 <body>
 
@@ -37,6 +37,6 @@ process();
 <script type="text/javascript">
 controller.loadEmployee(employeeId, isManager);
 </script>
-
+</center>
 </body>
 </html>
