--- a/technologies/HTMLFactExtractor/example/company.html
+++ b/technologies/HTMLFactExtractor/example/company.html
@@ -6,8 +6,14 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 <title></title>
 </head>
+<!-- Body not use -->
+
 <body>
 
+
+<!--
+Multiline use
+-->
 <center>
 <script type="text/javascript" src="head.js"></script>
 
